--- a/ecomsite/shop/templates/shop/checkout.html
+++ b/ecomsite/shop/templates/shop/checkout.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+        <a class="navbar-brand" href="#">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">Features</a>
                 <a class="nav-item nav-link" href="#">Pricing</a>
                 <a class="nav-item nav-link disabled" href="#">Disabled</a>
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-group" id="item_list">
-                    <!-- List group of clickable items -->
+                    <!-- List group of clickable items will be populated here -->
                 </ul>
             </div>
         </div>
@@ -76,7 +76,7 @@
 
     <footer class="text-center text-white" style="background-color: #0a4275;">
         <div class="container p-4 pb-0">
-            <section class="">
+            <section>
                 <p class="d-flex justify-content-center align-items-center">
                     <span class="me-3">Register for free</span>
                     <button type="button" class="btn btn-outline-light btn-rounded">Sign up!</button>
