--- a/ecomsite/shop/templates/shop/about_us.html
+++ b/ecomsite/shop/templates/shop/about_us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us - Pet Portal</title>
+    <title>Pawsome Appointment </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
@@ -50,12 +50,12 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img class="feature-image img-fluid" src="https://via.placeholder.com/500x300?text=Pets+Profiles" alt="Pets Profiles">
+            <img class="feature-image img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgD1lDmwjMrZG642-o1121EBXiNJ7fGJi0WQ&s" alt="Pets Profiles">
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <img class="feature-image img-fluid" src="https://via.placeholder.com/500x300?text=Veterinary+Network" alt="Veterinary Network">
+            <img class="feature-image img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_U7smagooGk7OTL8gSbjJM8xPyETYMfCoosNFxwlaafTMG_IrnKtRvBp_YSvV-zAEAkg&usqp=CAU" alt="Veterinary Network">
         </div>
         <div class="col-md-6">
             <div class="feature-item">
