--- a/ecomsite/shop/templates/shop/about_us.html
+++ b/ecomsite/shop/templates/shop/about_us.html
@@ -70,6 +70,41 @@
     </div>
 
     <p class="mt-3">At Pet Portal, our mission is to enhance the connection between pet owners and veterinary professionals, ensuring that your pet always receives timely and effective care. Join us in revolutionizing pet care management!</p>
+
+
+
+<div class="container">
+  <footer class="py-5">
+    <div class="row">
+
+
+  <!-- Footer -->
+  <footer class="text-center text-white" style="background-color: #3f04c2;">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: CTA -->
+      <section class="">
+        <p class="d-flex justify-content-center align-items-center">
+          <span class="me-3">Register for free</span>
+          <button data-mdb-ripple-init type="button" class="btn btn-outline-light btn-rounded">
+            Sign up!
+          </button>
+        </p>
+      </section>
+      <!-- Section: CTA -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      @Mehjabin @Soumit @Nanjiba
+
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+</section>
+
 </div>
 </body>
 </html>
