--- a/ecomsite/shop/templates/shop/signup.html
+++ b/ecomsite/shop/templates/shop/signup.html
@@ -159,7 +159,7 @@ button{
         <button type="submit"> Signup </button>
         <br>
         <br>
-        <a href="#"> I have already account   </a>
+        <a href="{% url 'login' %}"> I have already account   </a>
     </form>
 </body>
 </html>
