--- a/ecomsite/shop/templates/shop/index.html
+++ b/ecomsite/shop/templates/shop/index.html
@@ -37,10 +37,8 @@
           Appoint
       </button>
       </li>
-
         <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
-
-
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
     </ul>
   </div>
 </nav>
