--- a/ecomsite/shop/templates/shop/profile.html
+++ b/ecomsite/shop/templates/shop/profile.html
@@ -53,59 +53,19 @@
         <form id="userForm">
             <div class="form-group">
                 <label for="name">Name:</label>
-                <input type="text" id="name" class="form-control">
+                <input type="text" id="name" class="form-control" value="{{user.username}}">
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" class="form-control">
+                <input type="email" id="email" class="form-control" value="{{user.email}}">
             </div>
-            <div class="form-group">
-                <label for="phone">Phone Number:</label>
-                <input type="text" id="phone" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="address">Address:</label>
-                <input type="text" id="address" class="form-control">
-            </div>
+
             <input type="submit" value="Save Profile" class="submit-btn">
         </form>
     </div>
     <div class="pet-section">
         <h3>Pet Profile</h3>
-        <form id="petForm">
-            <div class="form-group">
-                <label for="petOwner">Owner:</label>
-                <input type="text" id="petOwner" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="petName">Pet Name:</label>
-                <input type="text" id="petName" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="petBreed">Breed:</label>
-                <input type="text" id="petBreed" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="petSpecies">Species:</label>
-                <input type="text" id="petSpecies" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="petGender">Gender:</label>
-                <select id="petGender" class="form-control">
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="petWeight">Weight:</label>
-                <input type="text" id="petWeight" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="petAge">Age:</label>
-                <input type="number" id="petAge" class="form-control">
-            </div>
-            <input type="submit" value="Save Pet Profile" class="submit-btn">
-        </form>
+
     </div>
 </div>
 
