--- a/ecomsite/shop/templates/shop/index.html
+++ b/ecomsite/shop/templates/shop/index.html
@@ -1,3 +1,5 @@
+{% extends "shop/base.html" %}
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -12,41 +14,12 @@
 
 
     <link rel="stylesheet" href="{% static 'shop/style.css' %}">
- <title>My First Web Page</title>
+ <title>Pawsome</title>
 
 </head>
 <body>
+  {% block content %}
  <div class="container">
-     <div class="row">
-         <div class="col-md-12">
-             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{% url 'index' %}">Pet Appointment </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only"></span></a>
-      </li>
-     <li class="nav-item">
-        <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
-     </li>
-      <li class="nav-item">
-      <button id="cart" data-html="true" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
-          Appoint
-      </button>
-      </li>
-        <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
-        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-    </ul>
-  </div>
-</nav>
-
-         </div>
-     </div>
-
-
 
      <div class="row">
        <div class="col-md-12">
@@ -67,21 +40,24 @@
 
 
 
-   <div class="row">
-     {% for product in product_objects %}
-     <div class="col-md-3" >
-       <div class="card">
-         <img src="{{ product.image }}" class="card-img-top">
-         <div class="card-body">
-           <div  id="nm{{product.id}}" class="card-title">{{product.title}}</div>
-           <div id="price{{product.id}}" class="card-text">{{product.price}} </div>
-             <a href="/{{product.id}}"  class="btn btn-warning">View</a><br>
-             <br><button id="{{product.id}}" class="btn atc btn-warning">Appointment</button>
-         </div>
-       </div>
-     </div>
-     {% endfor %}
-   </div>
+     <div class="row">
+      {% for product in product_objects %}
+      <div class="col-md-3">
+          <div class="card border-0 shadow-sm mb-4">
+              <img src="{{ product.image }}" class="card-img-top" alt="{{ product.title }}">
+              <div class="card-body">
+                  <h5 class="card-title">{{ product.title }}</h5>
+                  <p class="card-text text-primary">${{ product.price }}/hr</p>
+                  <div class="d-grid gap-2">
+                      <a href="/{{ product.id }}" class="btn btn-secondary">View</a>
+                      <a href="{% url 'book_doctor' product.id %}" class="btn btn-outline-success">Appoint</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      {% endfor %}
+  </div>
+  
 
 
    <div class="row">
@@ -106,47 +82,6 @@
  </div>
 
 
-
-<div class="container">
-  <footer class="py-5">
-    <div class="row">
-
-
-      <div class="col-6 col-md-2 mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-        </ul>
-      </div>
-
-
-
-      <div class="col-md-5 offset-md-1 mb-3">
-        <form>
-          <h5>Subscribe to our newsletter</h5>
-          <p>Monthly digest of what's new and exciting from us.</p>
-          <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-            <label for="newsletter1" class="visually-hidden">Email address</label>
-            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-            <button class="btn btn-primary" type="button">Subscribe</button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-      <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-      </ul>
-    </div>
-  </footer>
-</div>
 
 <section class="">
   <!-- Footer -->
@@ -208,7 +143,7 @@ $(document).on('click', '.atc', function () {
 
 function updateCartButton() {
     let totalItems = Object.values(cart).reduce((total, item) => total + item[0], 0);
-    document.getElementById("cart").innerHTML = "Cart(" + totalItems + ")";
+    document.getElementById("cart").innerHTML = "Appointment";
 }
 displayCart(cart);
 function displayCart(cart) {
@@ -237,6 +172,7 @@ $(document).ready(function()
     displayCart();
 });
 </script>
+{% endblock %}
 
 </html>
 
