--- a/ecomsite/shop/templates/shop/login.html
+++ b/ecomsite/shop/templates/shop/login.html
@@ -136,6 +136,9 @@ button{
     </style>
 </head>
 <body>
+<h1>
+    Nanjiba
+</h1>
     <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
