--- a/ecomsite/shop/templates/shop/base.html
+++ b/ecomsite/shop/templates/shop/base.html
@@ -6,37 +6,70 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Pawsome</title>
 </head>
+<style>
+#menu {
+    height: 80px;
+}
+
+.main-text {
+    width: 15%;
+    float: left;
+    line-height: 80px;
+    color: #37acef;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.main_menu {
+    width: 85%;
+    float: left;
+}
+
+.main_menu ul {
+    float: right;
+}
+
+.main_menu ul li {
+    float: left;
+    display: block;
+}
+
+.main_menu ul li a {
+    color: #353535;
+    font-size: 24px;
+    font-family: 'MyriadPro-reguler';
+    line-height: 80px;
+    margin-left: 15px;
+    transition: all linear .3s;
+    -webkit-transition: all linear .3s;
+    -moz-transition: all linear .3s;
+    -ms-transition: all linear .3s;
+    -o-transition: all linear .3s;
+}
+
+.main_menu ul li a:hover {
+    color: #8cb3da;
+}
+</style>
 <body>
-  <div class="row">
-    <div class="col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-<a class="navbar-brand" href="{% url 'index' %}">Pet Appointment </a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-<ul class="navbar-nav">
- <li class="nav-item active">
-   <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only"></span></a>
- </li>
-<li class="nav-item">
-   <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
-</li>
+ <nav id="menu">
+        <div class="container">
+            <div class="main-text">
+                <a class="navbar-brand" href="{% url 'index' %}">Pet Appointment </a>
+            </div>
+            <div class="main_menu">
+                <ul>
+                    <li><a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only"></span></a></li>
+                    <li><a class="nav-link" href="{% url 'profile' %}">My Profile</a></li>
+                    <li><a class="nav-link" href="{% url 'about_us' %}">About Us</a></li>
+                    <li><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-   <a class="nav-link" href="{% url 'about_us' %}">About Us</a>
-   <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-</ul>
-</div>
-</nav>
-
-    </div>
-</div>
-      <div>
         {% block content %}
         {% endblock %}
-      </div>
-    
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
