--- a/ecomsite/shop/templates/shop/home.html
+++ b/ecomsite/shop/templates/shop/home.html
@@ -4,176 +4,128 @@
     <meta charset="UTF-8">
     <title>Book a Doctor's Appointment</title>
     <style>
-
-
-
-#portfolio {
-    text-align: center;
-    padding-bottom: 50px;
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
 }
 
-.port_col {
-    width: 23.43%;
-    float: left;
-    margin-right: 20px;
+ul,
+ol {
+    list-style: none;
 }
 
-.port_col:nth-child(4) {
-    margin-right: 0;
+a {
+    display: inline-block;
+    text-decoration: none;
 }
 
-.port_img img {
-    width: 100%;
+img {
+    vertical-align: middle;
+}
+
+.container {
+    width: 960px;
+    margin: 0 auto;
+}
+
+.clr {
+    clear: both;
+}
+#menu {
+    height: 75px; /* Adjusted height for added space */
+            margin-bottom: 50px;
+}
+.logo-info {
+            display: flex;
+            align-items: center;
+            margin-bottom: 50px;
+            padding: 20px; /* Padding for bin-info */
+            border-radius: 8px; /* Rounded corners for bin-info */
+
+        }
+.logo {
+            top:100%;
+             margin-right: 15px;
+            left: 50%;
+            width: 100px;
+            background-color: #007bff;
+            border-radius: 50%;
+            justify-content: center;
+            align-items: center;
+        }
+.logo img{
+      width: 100%;
     max-width: 100%;
-    transition: all linear .3s;
-    -webkit-transition: all linear .3s;
-    -moz-transition: all linear .3s;
-    -ms-transition: all linear .3s;
-    -o-transition: all linear .3s;
+     border-radius: 50%;
 }
+.logo-text {
+            flex-grow: 1;
+            margin-right: 500px;
+           font-size: 24px;
+            font-weight: bold;
+        }
 
-.port_mar {
-    margin-bottom: 20px;
-}
 
-.port_row {
-    padding-top: 30px;
-}
 
-.port_img {
+
+   #banner{
+    background: url(https://v.fastcdn.co/u/d2739e00/64794775-0-a955bf-d0d2f5050f124.webp);
+    background-repeat: no-repeat;
+    background-size: cover ;
+    background-position: center;
     position: relative;
-    overflow: hidden;
+    z-index: 1;
+    top: 50%;
+    padding: 390px 0;
 }
 
-.port_img .overly {
+
+.banner_text{
+    color: #37acef;
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    transform: scale(0);
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transition: all linear .3s;
-    -webkit-transition: all linear .3s;
-    -moz-transition: all linear .3s;
-    -ms-transition: all linear .3s;
-    -o-transition: all linear .3s;
+    top: 25%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    text-align: left;
 }
 
-
-.port_img:hover .overly {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform-origin: bottom;
+.banner_text p{
+    font-size: 25px;
 }
-
-.port_img:hover img {
-    transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-}
-#main {
-    text-align: center;
-    padding-bottom: 50px;
-}
-
-/* =====================================================
-                    Portfolio part end
-======================================================*/
-.banner_text {
-    width: 450px;
-    float: right;
-    text-align: center;
-}
-
-
-
-.banner_text a {
-    padding: 10px 20px;
-    border: 1px solid #fff;
-    margin-left: -1000px;
-    color: #425aef;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    margin-top: 25px;
-    transition: all linear .3s;
-}
-
-.banner_text a:hover {
-    background: #979da2;
-    border-color: #686b6e;
+.btn{
+    padding: 20px 70px;
+    background: #37acef;
+    color: #fff;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 0 3px 0 0 #0f0f0f;
 }
 
     </style>
 </head>
 <body>
-<!-- ==================================================
-                    Portfolio part start
-    ====================================================-->
-    <section id="portfolio">
+    <nav id="menu">
         <div class="container">
-            <div class="common_head">
-                <h2>Pawsome Appointment </h2>
+            <div class="logo-info">
+            <div class="logo">
+                <img src="https://pawsome.ch/wp-content/uploads/2023/01/cropped-Logo-rund-farbig.png" alt="logo">
             </div>
-            <div class="port_row">
-                <div class="port_col">
-                    <div class="port_img port_mar">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRK6ulrGqo6gizfIs_fM9g5Ylku5XppTUYMx7V06SFlSQ&s" alt="">
-                        <div class="overly">
-                            <i class="fas fa-link"></i>
-                        </div>
-                    </div>
+             <div class="logo-text">
+                    <p>Pawsome Appoinment</p>
 
                 </div>
-                <div class="port_col">
-                    <div class="port_img port_mar">
-                        <img src="	https://faithfulfriendsvetclinic.com/wp-content/uploads/2023/11/vet1.jpg" alt="">
-                        <div class="overly">
-                            <i class="fas fa-link"></i>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="port_col">
-                    <div class="port_img port_mar">
-                        <img src="https://pewaukeeveterinaryservice.com/wp-content/uploads/2019/09/iStock-1065436826.jpg" alt="">
-                        <div class="overly">
-                            <i class="fas fa-link"></i>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="port_col">
-                    <div class="port_img port_mar">
-                        <img src="https://mybayutcdn.bayut.com/mybayut/wp-content/uploads/cat-vet.jpg" alt="">
-                        <div class="overly">
-                            <i class="fas fa-link"></i>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="clr"></div>
-            </div>
         </div>
-    </section>
-    <!-- ==================================================
-                    Portfolio part end
-    ====================================================-->
- <section id="banner">
+    </nav>
+    <section id="banner">
         <div class="container">
             <div class="banner_text">
-               <a href="{% url 'signup' %}">Get started</a>
+                <p>We offer a wide range of services to ensure your <br>pets are healthy and happy.</p><br>
+                <a  href="{% url 'signup' %}" class="btn btn-outline-primary"> Get started </a>
             </div>
             <div class="clr"></div>
         </div>
