--- a/ecomsite/shop/templates/shop/login.html
+++ b/ecomsite/shop/templates/shop/login.html
@@ -18,38 +18,22 @@
 }
 body{
     background-color: #380269;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Add this to prevent scrolling */
 }
 .background{
-    width: 430px;
-
-    height: 520px;
     position: absolute;
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 50%;
-}
-.background .shape{
-    height: 200px;
-    width: 200px;
-    position: absolute;
-    border-radius: 50%;
-}
-.shape:first-child{
-    background: linear-gradient(
-        #1845ad,
-        #23a2f6
-    );
-    left: -80px;
-    top: -80px;
-}
-.shape:last-child{
-    background: linear-gradient(
-        to right,
-        #ff512f,
-        #f09819
-    );
-    right: -30px;
-    bottom: -80px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('	https://c8.alamy.com/comp/2MX97W6/set-with-different-cute-pets-on-white-background-2MX97W6.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    filter: brightness(50%);
+    z-index: -1; /* Move the background behind other elements */
 }
 form{
     height: 520px;
@@ -136,15 +120,10 @@ button{
     </style>
 </head>
 <body>
-<h1>
-    Nanjiba
-</h1>
     <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
     </div>
     <form method="post">
-        <h3>Login Here</h3>
+        <h3>Admin Login Here</h3>
         {% csrf_token %}
         <label for="username">Username</label>
         <input type="text" placeholder="Enter Username" id="username" name="username">
@@ -160,5 +139,6 @@ button{
         </div> -->
         <a href="{% url 'signup' %}" >Create a account</a>
     </form>
+
 </body>
 </html>
