--- a/ecomsite/shop/templates/shop/base.html
+++ b/ecomsite/shop/templates/shop/base.html
@@ -23,6 +23,7 @@
 .main_menu {
     width: 85%;
     float: left;
+    position: relative;
 }
 
 .main_menu ul {
@@ -38,7 +39,7 @@
     color: #353535;
     font-size: 24px;
     font-family: 'MyriadPro-reguler';
-    line-height: 80px;
+    line-height: 63px;
     margin-left: 15px;
     transition: all linear .3s;
     -webkit-transition: all linear .3s;
