--- a/ecomsite/shop/templates/shop/detail.html
+++ b/ecomsite/shop/templates/shop/detail.html
@@ -5,22 +5,19 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-   
-
-    <title>Product Details</title>
+  <title>Product Details</title>
 </head>
 <body>
     {% block content %}
-
     <div class="container mt-5">
         <div class="row align-items-center">
           <div class="col-md-4">
             <img src="{{ product_object.image }}" alt="Product Image" class="img-fluid mb-3">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6" style="background-color: #6c757d; padding: 120px;">
             <h1>{{ product_object.title }}</h1>
             <h2 class="text-danger">{{ product_object.price }}/hr</h2>
-            <div class="text-primary mb-3">{{ product_object.category }}</div>
+            <div class="text-primary mb-3" style="font-color: #fff; font-weight:bold;">{{ product_object.category }}</div>
             <p>{{ product_object.description }}</p>
           </div>
         </div>
@@ -29,5 +26,7 @@
 {% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
