--- a/ecomsite/shop/templates/shop/detail.html
+++ b/ecomsite/shop/templates/shop/detail.html
@@ -17,7 +17,7 @@
           <div class="col-md-6" style="background-color: #6c757d; padding: 120px;">
             <h1>{{ product_object.title }}</h1>
             <h2 class="text-danger">{{ product_object.price }}/hr</h2>
-            <div class="text-primary mb-3" style="font-color: #fff; font-weight:bold;">{{ product_object.category }}</div>
+            <div class="text-primary mb-3" style="color: #fff; font-weight:bold;">Specialities:{{ product_object.category }}</div>
             <p>{{ product_object.description }}</p>
           </div>
         </div>
@@ -26,7 +26,5 @@
 {% endblock %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
