--- a/ecomsite/shop/templates/shop/petprofile.html
+++ b/ecomsite/shop/templates/shop/petprofile.html
@@ -12,13 +12,13 @@
 <body>
   {% block content %}
 
-   <div class="container mt-5">
+   <div class="container mt-5" style="background-color: #37acef;">
     <h1 class="text-center mb-4">Your Pets</h1>
     <div class="row">
         {% for pet in pets %}
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4">
-                    <div class="card-body">
+                    <div class="card-body" >
                         <h2 class="card-title">{{ pet.name }}</h2>
                         <p class="card-text">Species: {{ pet.species }}</p>
                         <p class="card-text">Age: {{ pet.age }}</p>
@@ -28,10 +28,10 @@
             </div>
         {% endfor %}
     </div>
-</div>
+</div><br>
 
 <div class="text-center">
-  <a href="{% url 'profile' %}" class="btn btn-primary">Back to Profile</a>
+  <a href="{% url 'profile' %}" class="btn btn-primary" style="background-color: #37acef;">Back to Profile</a>
 </div>
 
 
