--- a/ecomsite/shop/templates/shop/profile.html
+++ b/ecomsite/shop/templates/shop/profile.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col-md-6 p-0">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="card">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKSYmdwK3kLawMMTKh10NIErZ4LHYnosyAkC1FeCqi2g&s" class="card-img-top" alt="...">
                     </div>
                 </div>
